--- a/mega-elements-addons-for-elementor/includes/widgets/meafe-services/services.css
+++ b/mega-elements-addons-for-elementor/includes/widgets/meafe-services/services.css
@@ -1,7 +1,7 @@
 /*------------------------------*/
 /* Services Widget
 /*------------------------------*/
-.elementor-widget-meafe-services .elementor-widget-container {
+.elementor-widget-meafe-services {
     overflow: hidden;
 }
 .elementor-widget-meafe-services .meafe-grid-container{
