--- a/mega-elements-addons-for-elementor/includes/widgets/meafe-cf7/cf7.css
+++ b/mega-elements-addons-for-elementor/includes/widgets/meafe-cf7/cf7.css
@@ -22,6 +22,10 @@
     width: 100%;
 }
 
+.elementor-widget-meafe-cf7 .wpcf7-form-control.wpcf7-submit:hover {
+    opacity: 1;
+}
+
 form.meafe-cf7-form.break-column {
     display: flex;
     flex-wrap: wrap;
@@ -38,6 +42,7 @@ form.meafe-cf7-form.break-column p input {
 }
 
 @media only screen and (min-width:768px) {
+
     form.meafe-cf7-form.break-column p:nth-last-child(4),
     form.meafe-cf7-form.break-column p:nth-last-child(5) {
         width: 50%;
